# AOTrAdaBoost

./: .gitmodules  CMakeLists.txt  eval-atradaboost.py  eval-avg-params.py  eval-bike-perf.py  eval-params-synth.py  eval-params.py  eval-sensitivity.py  eval-significance.py  eval-synth-perf.py  plot-acc.py  plot-bike.py  table-atradaboost.sh  table-synth.sh  table.sh  tune-bike-weekday-weekend-all.sh  tune-bike-weekday-weekend.sh  tune-noise-0.0-0.0-gradual.sh  tune-noise-0.0-0.0.sh  tune-noise.sh
data/bike/: dc-weekday-source.arff  dc-weekend-source.arff  holiday.arff  weekday.arff  weekend.arff
generators/: agrawal_generator.py  generate-agrawal-imbalance.py  generate-agrawal-noise.py  generate-tree-noise-case.py  generate-tree-partial.py  random_tree_generator.py  stream_generator.py
run/: run-agrawal-abrupt.sh
src/: evaluator.py  main.py  trans_pearl.cpp  trans_pearl.h  trans_pearl_bindings.cpp  trans_pearl_wrapper.cpp  trans_pearl_wrapper.h  trans_tree.cpp  trans_tree.cpp.bk  trans_tree.h  trans_tree_wrapper.cpp  trans_tree_wrapper.h
